--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-mysql-workshop",
-  "version": "0.0.1",
+  "name": "new_package",
+  "version": "0.0.2",
   "description": "Workshop on NodeJS + MySQL",
   "main": "index.js",
   "scripts": {
@@ -11,9 +11,19 @@
     "nodejs",
     "workshop"
   ],
-  "author": "",
+  "author": "Allan MacDonald",
   "license": "ISC",
   "dependencies": {
+    "cli-table": "^0.3.1",
+    "colors": "^1.1.2",
     "mysql": "^2.9.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sumorocker/node-mysql-workshop.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sumorocker/node-mysql-workshop/issues"
+  },
+  "homepage": "https://github.com/sumorocker/node-mysql-workshop#readme"
 }
